cncf-certifications/cca/domains/network-policy/07-layer-3-node-based/manifests/allow-from-labeled-nodes.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-from-labeled-nodes
spec:
  endpointSelector:
    matchLabels:
      app: web
  ingress:
    - fromNodes:
        - matchLabels:
            node-lab: allowed
